syntax = "proto3";

package ai.pipestream.events;

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto"; // For flexible metadata

option java_package = "ai.pipestream.events";
option java_multiple_files = true;

// Event emitted by the Repository Service's Metadata Indexer
// once a document's core metadata has been successfully persisted to the database.
// This event is primarily for OpenSearch Manager to index system-level file metadata.
message RepoMetadataEvent {
  string event_id = 1;
  google.protobuf.Timestamp timestamp = 2;
  
  string document_id = 3;
  string drive_id = 4; // Using string for UUID
  string account_id = 5;
  string connector_id = 6;
  
  // Basic file info from the Node entity
  string name = 7;
  string path = 8;
  string content_type = 9;
  int64 size_bytes = 10;
  
  // S3 information
  string s3_key = 11;
  string s3_version_id = 12;
  
  // Additional JSON metadata (from Node entity)
  google.protobuf.Struct metadata = 13;
  
  // Type of update
  UpdateType update_type = 14;

  // Optional: Error information if the database persistence failed for some reason
  // (though the event should ideally only be emitted on success)
  optional string error_message = 15;
}

enum UpdateType {
  UPDATE_TYPE_UNSPECIFIED = 0;
  UPDATE_TYPE_CREATED = 1;
  UPDATE_TYPE_UPDATED = 2;
  UPDATE_TYPE_DELETED = 3;
}
